--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,8 @@
             "providers": [],
             "aliases": {}
         }
+    },
+    "require-dev": {
+        "rector/rector": "^0.17.0"
     }
 }
