--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
     "autoload": {
         "psr-4": {
-            "LaravelEnso\\Pdf\\": "src/"
+            "LaravelLiberu\\Pdf\\": "src/"
         }
     },
     "extra": {
