--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "laravel-liberu/pdf",
-    "description": "PDF for Laravel Enso",
+    "description": "PDF for Laravel Liberu",
     "keywords": [
         "laravel-liberu",
         "pdf",
